--- a/css/header.css
+++ b/css/header.css
@@ -33,7 +33,7 @@
   padding-top: 10px;
   cursor: pointer;
   transition: 0.2s cubic-bezier(0.45, 0, 0.55, 1);
-  font-size: 16px;
+  font-size: 20px;
   padding-bottom: 10px;
   position: relative;
   padding-left: 10px;
@@ -103,6 +103,7 @@
 @media screen and (max-width: 648px) {
   .header_pc {
     display: none;
+    z-index: -1;
   }
   .header_sp {
     display: block;
