--- a/css/map.css
+++ b/css/map.css
@@ -127,7 +127,7 @@
     display: block;
     float: left;
     width: 20%;
-    height:auto;
+    height:60px;
     text-align: center;
     border: #303030 1px solid;
 }
