--- a/css/style.scss
+++ b/css/style.scss
@@ -1,146 +1,25 @@
-.sp {
-    display: none;
+body{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.header_sp {
-    display: none;
-}
-
-.header {
-    padding-bottom: 5px;
-    &__nav {
-        // padding-top: 10px;
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-
-        // justify-content: space-around;
-        padding-bottom: 5px;
-        &_img {
-            // margin-top: -10px;
-            // margin-left: -20px;
-            width: 100px;
-            height: 100px;
-            position: fixed;
-            position:relative;
-            top: 0;
-            left: 0;
-        }
-        &__content {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-
-            &_link {
-                
-                padding-top: 10px;
-                cursor: pointer;
-                transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
-                font-size: 16px;
-                padding-bottom: 10px;
-                position: relative;
-                padding-left: 10px;
-                padding-right: 10px;
-                
-            }
-    
-            
-            &_link:hover:not(.header__nav_img) {
-                background-color: #ede9e9;
-            }
-        }
-        
-        // &_link::before {
-        //     // background: #000000;
-        //     content: '';
-        //     width: 100%;
-        //     height: 1.7px;
-        //     position: absolute;
-        //     left: 0;
-        //     bottom: 0;
-        //     margin: auto;
-        //     transform-origin: right top;
-        //     transform: scale(0, 1);
-        //     transition: transform .2s;
-        // }
-        // &_link:hover::before {
-        //     transform-origin: center top;
-        //     transform: scale(1, 1);
-        // }
-    }   
-}
-
-#hamburgermenu {
-    position: relative;
-    width: 40px;
-    height: 40px;
-}
-
-/* 要素のサイズ計算を容易にする */
-#hamburgermenu,
-#hamburgermenu * {
-    box-sizing: border-box;
-}
-
-/* メニューアイコン */
-.hamburgermenu__icon {
-    margin: 8px;
-}
-.hamburgermenu__icon:hover {
-    cursor: pointer; /* アイコンにマウスカーソルを合わせるとカーソルのアイコンを変える */
-}
-
-/* ナビゲーション */
-.hamburgermenu__nav {
+#header{
     position: fixed;
-    width: 300px;
-    max-width: 80%;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    padding: 8px;
-    background-color: #fff;
-    overflow-y: auto; /* ナビゲーションが長い場合にスクロールできるようにする */
-    transition: 250ms; /* ナビゲーションのスライドイン/アウトにかける秒数 */
-    transform: translateX(-100%); /* 横幅と同じ分だけ左側に移動させる */
-    z-index: 2; /* ハンバーガーメニューの要素の中では一番上に表示されるようにする */
+    z-index: 100000;
+    top:0;
+    width: 100%;
+    height:100px;
+    background-color: white;
 }
-
-
-#hamburgermenu.active .hamburgermenu__nav {
-    transform: translateX(0);
+main{
+    margin-top: 100px;
+    padding-top: 10px;
 }
-
-/* マスク */
-.hamburgermenu__mask {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.264);
-    visibility: hidden;
-    z-index: 1;
-}
-#hamburgermenu.active .hamburgermenu__mask {
-    visibility: visible;
-}
-
-@media screen and (max-width:648px) {
-    .header_pc {
-        display: none;
+@media screen and (max-width: 648px) {
+    main{
+        margin-top: auto;
+        padding-top: auto;
     }
-    .header_sp {
-        display: block;
-    }
-    
-    .header__nav_link::before {
-        content: "";
-        width: 0%;
-        height: 0px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        margin: auto;
-        
+    #header{
+        height:40px;
+        background-color: none;
     }
 }
