--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,81 @@
-#countdown-box {
+#load-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transition: opacity 3s;
+}
+
+.index-top {
   text-align: center;
+  margin-bottom: 100px;
 }
-
-#countdown-data {
-  font-size: 800%;
+.index-top-title {
+  font-size: 2rem;
 }
-
-#countdown {
+.index-top-img {
+  width: 40%;
+  margin-bottom: 50px;
+}
+.index-top-data {
   font-size: 4rem;
 }
-
-#countdown-title {
+.index-countdown-box {
+  text-align: center;
+  margin-bottom: 100px;
+}
+.index-countdown-content {
+  font-size: 3rem;
+}
+.index-countdown-title {
+  font-size: 2rem;
+}
+.index-message {
+  width: 60%;
+  margin-left: 20%;
+}
+.index-message-title {
   font-size: 1.5rem;
+  padding: 10px;
+}
+.index-message-content {
+  font-size: 1rem;
+  margin: 5px;
+  text-align: left;
+}
+.index-message-name {
+  font-size: 1rem;
+  margin: 5px;
+  text-align: right;
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 648px) {
+  .index-top-img {
+    width: 60%;
+  }
+  .index-top-title {
+    font-size: 1rem;
+  }
+  .index-countdown-content {
+    font-size: 4rem;
+  }
+  .index-countdown-data {
+    font-size: 4rem;
+  }
+  .index-countdown-title {
+    font-size: 1.5rem;
+  }
+  .index-message {
+    width: 90%;
+    margin-left: 5%;
+  }
+  .index-message-content {
+    font-size: 0.8rem;
+  }
+  .index-message-name {
+    font-size: 0.8rem;
+  }
 }/*# sourceMappingURL=index.css.map */
