--- a/css/index.scss
+++ b/css/index.scss
@@ -1,12 +1,89 @@
-#countdown-box{
-    text-align: center;
+#load-img{
+    position: fixed;
+    top:0;left:0;
+    width: 100%;
+    height:100%;
+    background-color: black;
+    transition: opacity 3s;
 }
-#countdown-data {
-    font-size: 800%;
+.index{
+    &-top{
+        text-align: center;
+        margin-bottom: 100px;
+        &-title{
+            font-size: 2rem;
+        }
+        &-img{
+            width: 40%;
+            margin-bottom: 50px;
+        }
+        &-data{
+            font-size: 4rem;
+        }
+    }
+    &-countdown{
+        &-box{
+            text-align: center;
+            margin-bottom: 100px;
+        }
+        &-content{
+            font-size: 3rem;
+        }
+        &-title{
+            font-size: 2rem;
+        }
+    }
+    &-message{
+        width: 60%;
+        margin-left: 20%;
+        &-title{
+            font-size: 1.5rem;
+            padding: 10px;
+        }
+        &-content{
+            font-size: 1rem;
+            margin: 5px;
+            text-align: left;
+        }
+        &-name{
+            font-size: 1rem;
+            margin: 5px;
+            text-align: right;
+            margin-bottom: 30px;
+        }
+    }
 }
-#countdown{
-    font-size: 4rem;
-}
-#countdown-title{
-    font-size:1.5rem;
+
+@media screen and (max-width: 648px) {
+    .index{
+        &-top{
+            &-img{
+                width: 60%;
+            }
+            &-title{
+                font-size:1rem;
+            }
+        }
+        &-countdown{
+            &-content{
+                font-size: 4rem;
+            }
+            &-data{
+                font-size: 4rem;
+            }
+            &-title{
+                font-size: 1.5rem;
+            }
+        }
+        &-message{
+            width: 90%;
+            margin-left: 5%;
+            &-content{
+                font-size: 0.8rem;
+            }
+            &-name{
+                font-size: 0.8rem;
+            }
+        }
+    }
 }
