--- a/css/map.css
+++ b/css/map.css
@@ -29,7 +29,6 @@
 
 .each-map {
   width: 100%;
-  border: #303030 3px solid;
 }
 
 .map-scroll {
@@ -61,6 +60,22 @@
   font-weight: bold;
   text-align: center;
   border: #303030 2px solid;
+}
+
+.map-clab {
+  background-color: rgb(10, 10, 255);
+}
+.map-honbu {
+  background-color: rgb(10, 90, 10);
+}
+.map-female {
+  background-color: rgb(144, 0, 0);
+}
+.map-male {
+  background-color: rgb(0, 0, 120);
+}
+.map-stage {
+  background-color: rgb(183, 183, 5);
 }
 
 .map-felement {
@@ -204,13 +219,7 @@
     left: 26%;
     right: 12.75%;
   }
-  footer {
-    position: relative;
-    display: block;
-    width: 100%;
-    padding: 50px;
-    background-color: #303030;
-    color: #e2e2e2;
-    margin-top: 0px;
+  .button {
+    font-size: 20px;
   }
 }/*# sourceMappingURL=map.css.map */
