--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,11 @@ body {
 
 main {
   margin-top: 100px;
-  padding-top: 10px;
 }
 
 @media screen and (max-width: 648px) {
   main {
-    margin-top: auto;
-    padding-top: auto;
+    margin-top: 40px;
   }
   #header {
     height: 40px;
