--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,15 @@
-#load-img {
+#load-img-pc {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transition: opacity 3s;
+}
+
+#load-img-phone {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -27,7 +38,8 @@
   margin-bottom: 100px;
 }
 .index-countdown-content {
-  font-size: 3rem;
+  font-size: 4rem;
+  color: #e95295;
 }
 .index-countdown-title {
   font-size: 2rem;
@@ -37,22 +49,31 @@
   margin-left: 20%;
 }
 .index-message-title {
-  font-size: 1.5rem;
-  padding: 10px;
+  font-size: 2.5rem;
+  border-bottom: 2px #e95295 solid;
+  border-left: 6px #e95295 solid;
+  margin-bottom: 20px;
 }
 .index-message-content {
-  font-size: 1rem;
+  width: 90%;
+  font-size: 1.2rem;
   margin: 5px;
   text-align: left;
 }
 .index-message-name {
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin: 5px;
   text-align: right;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
-@media screen and (max-width: 648px) {
+@media screen and (max-width: 480px) {
+  #load-img-pc {
+    display: none;
+  }
+  #load-img-phone {
+    display: block;
+  }
   .index-top-img {
     width: 60%;
   }
@@ -73,9 +94,9 @@
     margin-left: 5%;
   }
   .index-message-content {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .index-message-name {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 }/*# sourceMappingURL=index.css.map */
