--- a/css/map.css
+++ b/css/map.css
@@ -19,7 +19,9 @@
   margin: 10px 0;
   font-size: 2rem;
   font-weight: 700;
-  text-align: center;
+  border-bottom: 2px #e95295 solid;
+  border-left: 6px #e95295 solid;
+  margin-bottom: 20px;
 }
 
 .map {
@@ -62,20 +64,11 @@
   border: #303030 2px solid;
 }
 
-.map-clab {
-  background-color: rgb(10, 10, 255);
-}
-.map-honbu {
-  background-color: rgb(10, 90, 10);
-}
 .map-female {
   background-color: rgb(144, 0, 0);
 }
 .map-male {
-  background-color: rgb(0, 0, 120);
-}
-.map-stage {
-  background-color: rgb(183, 183, 5);
+  background-color: rgb(0, 0, 255);
 }
 
 .map-felement {
@@ -116,7 +109,8 @@
 
 .ftext2 {
   /* line-height: 1.2; */
-  font-size: 1rem;
+  background-color: white;
+  font-size: 1.4rem;
   word-wrap: break-word;
   display: flex;
 }
@@ -155,14 +149,27 @@
 .button {
   display: block;
   float: left;
-  width: 20%;
+  margin: 1%;
+  width: 18%;
   height: 60px;
   text-align: center;
   border: #303030 1px solid;
+  border-radius: 20px;
 }
-
-.button:hover {
-  background-color: #edede9;
+.button-1:hover {
+  background-color: #FF0007;
+}
+.button-2:hover {
+  background-color: #FFF200;
+}
+.button-3:hover {
+  background-color: #00D521;
+}
+.button-4:hover {
+  background-color: #00ABFA;
+}
+.button-5:hover {
+  background-color: #3D47D4;
 }
 
 @media screen and (min-width: 481px) {
@@ -172,15 +179,6 @@
   .map-content {
     display: none;
     padding: 10px;
-  }
-  footer {
-    position: relative;
-    display: block;
-    width: 100%;
-    padding: 50px;
-    background-color: #303030;
-    color: #e2e2e2;
-    margin-top: 0px;
   }
 }
 @media screen and (max-width: 480px) {
