--- a/css/map.scss
+++ b/css/map.scss
@@ -16,7 +16,10 @@
     margin: 10px 0;
     font-size: 2rem;
     font-weight: 700;
-    text-align: center;
+    // text-align: center;
+    border-bottom: 2px #e95295 solid;
+    border-left:6px #e95295 solid;
+    margin-bottom: 20px;
 }
 .map{
     margin: 0 -5vw;
@@ -53,20 +56,20 @@
     border: #303030 2px solid;
 }
 .map{
-    &-clab{
-        background-color: rgb(10, 10, 255);
-    }
-    &-honbu{
-        background-color: rgb(10, 90, 10);
-    }
+    // &-clab{
+    //     background-color: #19448e;
+    // }
+    // &-honbu{
+    //     background-color: #4169e1;
+    // }
+    // &-stage{
+    //     background-color: #89c3eb;
+    // }
     &-female{
         background-color: rgb(144, 0, 0);
     }
     &-male{
-        background-color: rgb(0, 0, 120);
-    }
-    &-stage{
-        background-color: rgb(183, 183, 5);
+        background-color: rgb(0, 0, 255);
     }
 }
 .map-felement{
@@ -103,7 +106,8 @@
 }
 .ftext2{
     /* line-height: 1.2; */
-    font-size: 1rem;
+    background-color: white;
+    font-size: 1.4rem;
     word-wrap: break-word;
     display:flex;
 }
@@ -138,13 +142,17 @@
 .button{
     display: block;
     float: left;
-    width: 20%;
+    margin: 1%;
+    width: 18%;
     height:60px;
     text-align: center;
     border: #303030 1px solid;
-}
-.button:hover{
-    background-color: #edede9;
+    border-radius: 20px;
+    &-1:hover{background-color: #FF0007;}
+    &-2:hover{background-color: #FFF200;}
+    &-3:hover{background-color: #00D521;}
+    &-4:hover{background-color: #00ABFA;}
+    &-5:hover{background-color: #3D47D4;}
 }
 @media screen and (min-width: 481px){
     .button-container {
@@ -153,15 +161,6 @@
     .map-content {
         display: none;
         padding: 10px;
-    }
-    footer {
-        position: relative;
-        display: block;
-        width: 100%;
-        padding: 50px;
-        background-color: #303030;
-        color: #e2e2e2;
-        margin-top: 0px;
     }
 }
 @media screen and (max-width: 480px){
