--- a/css/style.scss
+++ b/css/style.scss
@@ -4,14 +4,26 @@ body {
   font-family: "Noto Sans JP", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  background-color: #e2e2e2;
 }
 #header{
     position: fixed;
-    z-index: 100000;
+    z-index: 1000;
     top:0;
     width: 100%;
     height:100px;
-    background-color: white;
+}
+#footer{
+    background-color: #2e2930;
+    height:150px;
+    color:#e2e2e2;
+    margin-bottom: 0;
+}
+.footer{
+    text-align: center;
+    padding-top: 30px;
+    position: relative;
+    height:150px;
 }
 main{
     margin-top: 100px;
