--- a/css/members.css
+++ b/css/members.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=members.css.map */
+.member {
+  text-align: center;
+}
+.member-all {
+  font-size: 2rem;
+  text-align: center;
+}/*# sourceMappingURL=members.css.map */
