--- a/css/members.css
+++ b/css/members.css
@@ -1,7 +1,17 @@
-.member {
-  text-align: center;
+.member-title {
+  width: 80%;
+  margin-left: 10%;
+  font-size: 2.5rem;
+  border-bottom: 2px #e95295 solid;
+  border-left: 6px #e95295 solid;
+  margin-bottom: 20px;
 }
 .member-all {
+  margin-top: 10px;
   font-size: 2rem;
+  text-align: center;
+}
+.member-name {
+  margin-top: 5px;
   text-align: center;
 }/*# sourceMappingURL=members.css.map */
