--- a/css/index.css
+++ b/css/index.css
@@ -55,9 +55,10 @@
   margin-bottom: 20px;
 }
 .index-message-content {
+  margin: 5px;
+  margin-left: 5%;
   width: 90%;
   font-size: 1.2rem;
-  margin: 5px;
   text-align: left;
 }
 .index-message-name {
@@ -65,6 +66,7 @@
   margin: 5px;
   text-align: right;
   margin-bottom: 40px;
+  margin-right: 5%;
 }
 
 @media screen and (max-width: 480px) {
