--- a/css/members.scss
+++ b/css/members.scss
@@ -8,12 +8,13 @@
             margin-bottom: 20px;
     }
     &-all{
-        margin-top: 10px;
+        margin-top: 25px;
          font-size: 2rem;
         text-align: center;
     }
     &-name{
-        margin-top: 5px;
+        font-size: 125%;
+        margin-top: 10px;
         text-align: center;
     }
 }
