--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@ body {
   font-family: "Noto Sans JP", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  background-color: #e2e2e2;
+  background-color: #f3f3f2;
 }
 #header{
     position: fixed;
@@ -12,12 +12,12 @@ body {
     top:0;
     width: 100%;
     height:100px;
-    background-color: rgba(226,226,226,0.9);
+    background-color: rgba(243,243,242,0.9);
 }
 #footer{
     background-color: #2e2930;
     height:150px;
-    color:#e2e2e2;
+    color:#f3f2f2;
     margin-bottom: 0;
 }
 .footer{
